--- a/src/sections/SubscriptionFAQSection.css
+++ b/src/sections/SubscriptionFAQSection.css
@@ -32,6 +32,10 @@
   font-size: 1rem;
   color: #64748b;
   line-height: 1.5;
+  text-align: center;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .faq-list {
